feat: orders method fix

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "surprisewrap_backend",
   "scripts": {
+    "start": "tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
     "test": "jest --runInBand",
     "test:watch": "jest --watch"
