fix: decoupling and implementing patterns

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@hono/node-server": "^1.13.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.14.1",
-    "hono": "^4.6.5"
+    "hono": "^4.6.5",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "@types/jest": "^29.5.13",
     "@types/node": "^20.11.17",
+    "@types/nodemailer": "^6.4.16",
     "@types/supertest": "^6.0.2",
     "firebase-mock": "^2.3.2",
     "jest": "^29.7.0",
